# market-data

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
backend/: .gitignore  Cargo.toml  README.md
backend-sse/: .gitignore  Cargo.toml  README.md  example-client.html
backend-sse/src/: lib.rs  main.rs  message.rs  order_book.rs  sse_handler.rs  stream_manager.rs
backend/src/: lib.rs  main.rs  message.rs  stream_manager.rs  websocket_handler.rs
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.css
frontend/src/components/: MarketDepth.css  MarketDepth.jsx
frontend/src/services/: WebSocketService.js
src/: App.css  App.jsx
src/components/: MarketDepth.css  MarketDepth.jsx
src/utils/: OrderBook.js
