[package]
name = "market-depth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[lib]
name = "market_depth_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"